[tool.poetry]
name = "sonus-av"
version = "0.1.0"
description = "A library to add voice and image input support to large language models (LLMs)."
authors = ["tknishh <tanishqkhandelwaltqk011@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.12"
pytesseract = "^0.3.10"
pillow = "^10.3.0"
openai = "^1.23.2"
speechrecognition = "^3.10.3"
deep-translator = "^1.11.4"
pyaudio = "^0.2.14"
imgcat = "^0.5.0"
pybase64 = "^1.3.2"
requests = "^2.31.0"
google-transliteration-api = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
